--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<ol type="1">
+	<li>
+			house
+		</li>
+		<li>travel</li>
+		<li>charity</li>
+	</ol>
+	<ul>
+		<li>kerala</li>
+		<li>north-east</li>
+		<li>mountains</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
