--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 	<ol type="1">
-	<li>
+	<li data-ns-test="shoppingList">
 			house
 		</li>
-		<li>travel</li>
-		<li>charity</li>
+		<li data-ns-test="shoppingList">travel</li>
+		<li data-ns-test="shoppingList">charity</li>
 	</ol>
 	<ul>
-		<li>kerala</li>
-		<li>north-east</li>
-		<li>mountains</li>
+		<li data-ns-test="holidayList">kerala</li>
+		<li data-ns-test="holidayList">north-east</li>
+		<li data-ns-test="holidayList">mountains</li>
 	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
